Refactored Subscription and DTO for the most part. User creation works, subscription creation works as well for a user. Needs more User fill out